fix truncation handling

--- a/styles/jupyter-next.less
+++ b/styles/jupyter-next.less
@@ -329,6 +329,11 @@
     margin-top: 4px;
   }
 
+  pre, code {
+    font-family: inherit;
+    font-size: inherit;
+  }
+
   .output-stream, .output-text {
     white-space: pre-wrap;
     word-wrap: break-word;
